--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react": "^17.0.1",
     "react-native": "^0.63.3",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-hyperlink": "0.0.19",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-modal": "^11.5.6",
     "react-native-reanimated": "^1.13.1",
     "react-native-responsive-screen": "^1.4.1",
