--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "react-navigation-stack": "^2.10.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "express": "^4.16.3",
+    "if-env": "^1.0.4",
+    "mongoose": "^5.3.16"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
