--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "aws-amplify": "^3.3.8",
     "aws-amplify-react-native": "^4.2.8",
     "axios": "^0.21.0",
+    "express": "^4.16.3",
+    "if-env": "^1.0.4",
+    "mongoose": "^5.3.16",
     "react": "^17.0.1",
     "react-native": "^0.63.3",
     "react-native-gesture-handler": "^1.8.0",
@@ -31,15 +34,13 @@
     "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.14.0",
+    "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^7.1.0",
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.10.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "express": "^4.16.3",
-    "if-env": "^1.0.4",
-    "mongoose": "^5.3.16"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
